--- a/src/jade/templates/home/watchlist.jade
+++ b/src/jade/templates/home/watchlist.jade
@@ -1,6 +1,12 @@
 doctype
-md-grid-list.watchlist(md-row-height="4:3",md-gutter="8px",md-cols="2",layout-padding)
+md-grid-list.watchlist(ng-if="gridView",md-row-height="4:3",md-gutter="8px",md-cols="2",layout-padding)
   md-grid-tile.product(md-colspan="1",ng-repeat="product in watchlist",ng-click="loadProduct(product)",ng-style="productStyle(product)")
     md-icon
     md-grid-tile-footer
       h3 {{ product.name }}
+md-list.watchlist(ng-if="!gridView",layout-padding)
+  md-list-item.md-2-line(ng-repeat="product in watchlist",ng-click="loadProduct(product)")
+    img.md-avatar(ng-src="{{ product.image_thumb_url }}")
+    .md-list-item-text
+      h3 {{ product.name }}
+      p {{ product.producer_name }}
