--- a/src/scss/watchlist.scss
+++ b/src/scss/watchlist.scss
@@ -1,9 +1,8 @@
 .watchlist {
-  margin: 0 8px;
+  //margin: 0 8px;
   .product {
-    background-size: 400%;
+    background-size: cover;
     background-color: white;
-    background-position: center 50%;
     background-repeat: no-repeat;
   }
 }
