--- a/src/scss/product.scss
+++ b/src/scss/product.scss
@@ -8,9 +8,20 @@
     background-position-y: 60%;
   }
   md-toolbar {
-    margin-top: -64px;
-    background-color: rgba(0,0,0,0.4);
+    @include gradient(rgba(0,0,0,0), rgba(0,0,0,0.4));
+    margin-top: -128px;
+    padding-top: 64px;
+    height: 128px;
     color: white;
+    .md-toolbar-tools {
+      align-items: flex-start;
+      flex-direction: column;
+      overflow: hidden;
+      .md-title {
+        font-weight: 600;
+        white-space: nowrap;
+      }
+    }
   }
   a.md-button.md-default-theme.md-fab, .md-button.md-default-theme.md-fab {
     position: absolute;
@@ -27,7 +38,7 @@
     }
   }
   md-content.lower {
-    //background-color: $purple;
+    background-color: white;
     * {
       //color: rgba(255,255,255,0.87) !important;
     }
