--- a/src/index.jade
+++ b/src/index.jade
@@ -15,15 +15,7 @@ html
     // Cordova 4.0.0
     script(src="cordova.js",charset="utf-8")
     // Elsie 2.0
-    script(src="js/app.js",charset="utf-8")
-    script(src="js/controllers.js",charset="utf-8")
-    script(src="js/directives.js",charset="utf-8")
-    script(src="js/services/master.js",charset="utf-8")
-    script(src="js/services/scheduler.js",charset="utf-8")
-    script(src="js/services/location.js",charset="utf-8")
-    script(src="js/services/products.js",charset="utf-8")
-    script(src="js/services/watchlist.js",charset="utf-8")
-    script(src="js/keys.js",charset="utf-8")
+    script(src="js/elsie.js",charset="utf-8")
     link(rel="stylesheet", href="css/app.css")
   body(ng-app="elsie")
     div(layout="column",layout-fill,ng-controller="AppCtrl")
