fix template snafu

--- a/src/elsie.common/styles/master.scss
+++ b/src/elsie.common/styles/master.scss
@@ -48,6 +48,9 @@ md-toolbar {
     h2 {
       font-weight: 500;
     }
+    h5 {
+      margin: 0;
+    }
   }
   &.md-theme-search {
     background-color: #FAFAFA;
