--- a/src/elsie.home/styles/watchlist.scss
+++ b/src/elsie.home/styles/watchlist.scss
@@ -1,8 +1,27 @@
 .watchlist {
   //margin: 0 8px;
-  .product {
+  &.grid .product {
     background-size: cover;
     background-color: white;
     background-repeat: no-repeat;
+  }
+  &.carousel {
+    .scroller {
+      width: 100%;
+      height: 435px;
+    }
+    .product {
+      box-sizing: border-box;
+      display: inline-block;
+      width: 200px;
+      height: 400px;
+      padding-top: 35px;
+      text-align: center;
+      outline: none;
+      cursor: pointer;
+      img {
+        height: 100%;
+      }
+    }
   }
 }
