--- a/src/index.jade
+++ b/src/index.jade
@@ -14,6 +14,8 @@ html
     link(rel="stylesheet", href="css/lib/angular-material.css")
     // Cordova 4.0.0
     script(src="cordova.js",charset="utf-8")
+    // Verge 1.9.1
+    script(src="js/lib/verge.min.js",charset="utf-8")
     // Elsie 2.0
     script(src="js/elsie.js",charset="utf-8")
     link(rel="stylesheet", href="css/app.css")
