--- a/src/elsie.product/styles/product.scss
+++ b/src/elsie.product/styles/product.scss
@@ -1,21 +1,33 @@
 .product.single {
   .image {
-    height: 264px;
+    height: 244px;
     background-color: white;
     background-size: 120%;
     background-repeat: no-repeat;
     background-position-x: -75%;
     background-position-y: 60%;
   }
-  md-toolbar {
+  md-toolbar.upper {
+    background-color: transparent;
+    position: absolute;
+    width: 100%;
+    .md-icon-button {
+      margin-left: -13px;
+      md-icon {
+        color: $charcoal;
+      }
+    }
+  }
+  md-toolbar.lower {
     @include gradient(rgba(0,0,0,0), rgba(0,0,0,0.4));
-    margin-top: -128px;
+    margin-top: -148px;
     padding-top: 64px;
     height: 128px;
     color: white;
     .md-toolbar-tools {
-      align-items: flex-start;
-      flex-direction: column;
+      //align-items: flex-start;
+      //flex-direction: column;
+      display: block;
       overflow: hidden;
       .md-title {
         font-weight: 600;
@@ -26,21 +38,12 @@
   a.md-button.md-default-theme.md-fab, .md-button.md-default-theme.md-fab {
     position: absolute;
     right: 20px;
-    top: 230px;
+    top: 210px;
   }
   md-content.upper {
-    .md-icon-button {
-      float: left;
-      margin: 0;
-      md-icon {
-        color: $charcoal;
-      }
-    }
+    overflow: hidden;
   }
   md-content.lower {
-    //background-color: white;
-    * {
-      //color: rgba(255,255,255,0.87) !important;
-    }
+    //
   }
 }
