--- a/src/index.jade
+++ b/src/index.jade
@@ -27,5 +27,5 @@ html
         md-content(layout-padding,ng-controller="MenuCtrl")
           md-button(ng-click="close()",class="md-primary") Close
       md-content#main
-        .android-bar
+        .bar
         div(ui-view,state-class)
