--- a/src/elsie.home/templates/explore.jade
+++ b/src/elsie.home/templates/explore.jade
@@ -1,25 +1,9 @@
-md-grid-list.gridListdemoBasicUsage(md-cols-sm='2', md-cols-md='2', md-cols-gt-md='6', md-row-height-gt-md='1:1', md-row-height='1:1', md-gutter='8px', md-gutter-gt-sm='8px')
-  md-grid-tile.red(md-rowspan='1', md-colspan='2')
-    md-grid-tile-footer
-      h3 #5: (2r x 2c)
-  md-grid-tile.green
-    md-grid-tile-footer
-      h3 #2: (1r x 1c)    
-  md-grid-tile.yellow
-    md-grid-tile-footer
-      h3 #3: (1r x 1c)
-  md-grid-tile.blue
-    md-grid-tile-footer
-      h3 #4: (2r x 1c)
-  md-grid-tile.gray
-    md-grid-tile-footer
-      h3 #4: (2r x 1c)
-  md-grid-tile.yellow(md-rowspan='1', md-colspan='2')
-    md-grid-tile-footer
-      h3 #5: (2r x 2c)
-  md-grid-tile.green(md-rowspan='1')
-    md-grid-tile-footer
-      h3 #6: (2r x 1c)
-  md-grid-tile.blue(md-rowspan='1')
-    md-grid-tile-footer
-      h3 #6: (2r x 1c)
+.explore
+  md-grid-list(md-cols-sm='2', md-cols-md='2', md-cols-gt-md='6', md-row-height-gt-md='1:1', md-row-height='1:1', md-gutter='1px', md-gutter-gt-sm='1px')
+    md-grid-tile.temp-1(md-rowspan='1', md-colspan='2', ng-click="loadMalbec()")
+      h3 Try the new Catena Malbec
+  h5 Other fine products on sale
+  .watchlist.carousel
+    md-virtual-repeat-container.scroller(md-orient-horizontal)
+      .product(md-virtual-repeat="product in watchlist",ng-click="loadProduct(product)")
+        img(ng-src="{{ product.image_url }}")
