--- a/src/elsie.home/templates/master.jade
+++ b/src/elsie.home/templates/master.jade
@@ -12,7 +12,7 @@ md-toolbar.md-default-theme
       md-icon(md-svg-icon="img/view_module.svg")
     md-button.md-icon-button(aria-label="Search", ng-click="go('search')")
       md-icon(md-svg-icon="img/search.svg")
-md-tabs.full.md-primary(md-selected="selectedIndex", md-no-pagination="true", md-stretch-tabs="always", md-swipe-content="true")
+md-tabs.full.md-primary(md-selected="selectedIndex", md-no-pagination="true", md-stretch-tabs="always")
   md-tab(label='Explore', md-on-select="go('home.explore')")
     div(ui-view='explore')
   md-tab(label='Cellar', md-on-select="go('home.watchlist')")
