--- a/src/elsie.common/styles/animations.scss
+++ b/src/elsie.common/styles/animations.scss
@@ -1,79 +1,63 @@
 [ui-view] {
   position: absolute;
-  top: 25px;
+  top: 0;
   bottom: 0;
   left: 0;
   right: 0;
-  &.state-product {
-    top: 0;
-  }
 }
 
-[ui-view="watchlist"] {
-  top: 0;
-  background-color: #fafafa;
-}
-
+// setting general speed for all states, whether they're leaving or entering so we stay synced
 [ui-view].ng-enter, [ui-view].ng-leave {
-  -webkit-transition:all .5s ease-in-out;
-    -moz-transition:all .5s ease-in-out;
-    -o-transition:all .5s ease-in-out;
-    transition:all .5s ease-in-out;
+  -webkit-transition:all $transition ease-in-out;
+  transition:all $transition ease-in-out;
+  -webkit-transition-delay: 0.01s;
+  transition-delay: 0.01s;
 }
 
+// exiting state (initial)
 [ui-view].ng-leave {
-  bottom: 0;
   z-index: 0;
-  &.state-product {
+  -webkit-transform:translate3d(0, 0, 0);
+  transform:translate3d(0, 0, 0);
+  &.state-forward {
     z-index: 1;
     -webkit-transform:translate3d(0, 0, 0);
-    -moz-transform:translate3d(0, 0, 0);
     transform:translate3d(0, 0, 0);
   } 
-  &.state-search {
-    z-index: 0;
-    opacity: 1;
-  }
 }
 
+// exiting state (final)
 [ui-view].ng-leave-active {
-  bottom: 1px;
   z-index: 0;
-  &.state-product {
+  -webkit-transform:translate3d(-33%, 0, 0);
+  transform:translate3d(-33%, 0, 0);
+  &.state-forward {
     z-index: 1;
-    -webkit-transform:translate3d(0, 100%, 0);
-    -moz-transform:translate3d(0, 100%, 0);
-    transform:translate3d(0, 100%, 0);
+    -webkit-transform:translate3d(100%, 0, 0);
+    transform:translate3d(100%, 0, 0);
   } 
-  &.state-search {
-    z-index: 0;
-    opacity: 0;
-  }
 }
 
+// entering state (initial)
 [ui-view].ng-enter {
-  &.state-product {
+  z-index: 0;
+  -webkit-transform:translate3d(-33%, 0, 0);
+  transform:translate3d(-33%, 0, 0);
+  &.state-forward {
     z-index: 1;
-    -webkit-transform:translate3d(0, 100%, 0);
-    -moz-transform:translate3d(0, 100%, 0);
-    transform:translate3d(0, 100%, 0);
+    -webkit-transform:translate3d(100%, 0, 0);
+    transform:translate3d(100%, 0, 0);
   } 
-  &.state-search {
-    z-index: 1;
-    opacity: 0;
-  }
 }
 
+// entering state (final)
 [ui-view].ng-enter-active {
-  &.state-product {
-    opacity: 1;
+  z-index: 0;
+  -webkit-transform:translate3d(0, 0, 0);
+  transform:translate3d(0, 0, 0);
+  &.state-forward {
     z-index: 1;
     -webkit-transform:translate3d(0, 0, 0);
-    -moz-transform:translate3d(0, 0, 0);
     transform:translate3d(0, 0, 0);
-  }
-  &.state-search {
-    z-index: 1;
-    opacity: 1;
   }
 }
