--- a/src/elsie.home/styles/explore.scss
+++ b/src/elsie.home/styles/explore.scss
@@ -4,6 +4,7 @@
     background-position-y: center;
     background-position-x: center;
     background-repeat: no-repeat;
+    outline: none;
     h3 {
       font-weight: 400;
       max-width: 50%;
