--- a/src/elsie.home/templates/explore.jade
+++ b/src/elsie.home/templates/explore.jade
@@ -1,9 +1,9 @@
-.explore
+.explore(ng-controller="ExploreCtrl")
   md-grid-list(md-cols-sm='2', md-cols-md='2', md-cols-gt-md='6', md-row-height-gt-md='1:1', md-row-height='1:1', md-gutter='1px', md-gutter-gt-sm='1px')
     md-grid-tile.temp-1(md-rowspan='1', md-colspan='2', ng-click="loadMalbec()")
       h3 Try the new Catena Malbec
   h5 Other fine products on sale
   .watchlist.carousel
-    md-virtual-repeat-container.scroller(md-orient-horizontal)
-      .product(md-virtual-repeat="product in watchlist",ng-click="loadProduct(product)")
+    .scroller
+      .product(ng-repeat="product in watchlist",ng-click="loadProduct(product)")
         img(ng-src="{{ product.image_url }}")
