--- a/src/elsie.common/styles/animations.scss
+++ b/src/elsie.common/styles/animations.scss
@@ -8,8 +8,8 @@
 
 // setting general speed for all states, whether they're leaving or entering so we stay synced
 [ui-view].ng-enter, [ui-view].ng-leave {
-  -webkit-transition:all $transition ease-in-out;
-  transition:all $transition ease-in-out;
+  -webkit-transition:all $transition ease;
+  transition:all $transition ease;
   -webkit-transition-delay: 0.01s;
   transition-delay: 0.01s;
 }
@@ -19,7 +19,7 @@
   z-index: 0;
   -webkit-transform:translate3d(0, 0, 0);
   transform:translate3d(0, 0, 0);
-  &.state-forward {
+  &.state-higher {
     z-index: 1;
     -webkit-transform:translate3d(0, 0, 0);
     transform:translate3d(0, 0, 0);
@@ -31,7 +31,7 @@
   z-index: 0;
   -webkit-transform:translate3d(-33%, 0, 0);
   transform:translate3d(-33%, 0, 0);
-  &.state-forward {
+  &.state-higher {
     z-index: 1;
     -webkit-transform:translate3d(100%, 0, 0);
     transform:translate3d(100%, 0, 0);
@@ -43,7 +43,7 @@
   z-index: 0;
   -webkit-transform:translate3d(-33%, 0, 0);
   transform:translate3d(-33%, 0, 0);
-  &.state-forward {
+  &.state-higher {
     z-index: 1;
     -webkit-transform:translate3d(100%, 0, 0);
     transform:translate3d(100%, 0, 0);
@@ -55,7 +55,7 @@
   z-index: 0;
   -webkit-transform:translate3d(0, 0, 0);
   transform:translate3d(0, 0, 0);
-  &.state-forward {
+  &.state-higher {
     z-index: 1;
     -webkit-transform:translate3d(0, 0, 0);
     transform:translate3d(0, 0, 0);
