--- a/src/elsie.common/styles/animations.scss
+++ b/src/elsie.common/styles/animations.scss
@@ -10,8 +10,12 @@
 [ui-view].ng-enter, [ui-view].ng-leave {
   -webkit-transition:all $transition ease;
   transition:all $transition ease;
-  //-webkit-transition-delay: 0.01s;
-  //transition-delay: 0.01s;
+  -webkit-transition-delay: 0.01s;
+  transition-delay: 0.01s;
+  &.no-animate {
+    -webkit-transition-delay: 0s;
+    transition-delay: 0s;
+  }
 }
 
 // exiting state (initial)
@@ -53,6 +57,7 @@
     transform:translate3d(100%, 0, 0);
   }
   &.no-animate {
+    z-index: 1;
     -webkit-transform:translate3d(0, 0, 0);
     transform:translate3d(0, 0, 0);
   }
