--- a/src/elsie.store/templates/store.jade
+++ b/src/elsie.store/templates/store.jade
@@ -1,25 +1,26 @@
 doctype
-.store.single
+.store.single(ng-style="image")
   md-content.upper
-    md-toolbar.upper
-      .md-toolbar-tools
-        md-button.md-icon-button(aria-label="Back", ng-click="back()")
-          md-icon(md-svg-icon="img/arrow_back.svg")
-    .image(ng-style="image")
+    .image
     md-toolbar.lower
       .md-toolbar-tools
         h2.md-title {{ store.name }}
         h5.md-subhead {{ store.address_line_1 }}
-  //md-button.md-fab(aria-label="Add to Watchlist",ng-click="toggleWatch(product)")
-    md-icon(md-svg-src='img/favorite.svg',ng-if="isWatched")
-    md-icon(md-svg-src='img/favorite_outline.svg',ng-if="!isWatched")
   md-content.lower.md-default.md-primary-bg
     md-list
-      md-list-item.md-2-line(ng-if="product.varietal")
+      md-list-item.md-2-line
+        .md-list-item-text
+          h3 {{ store.address_line_1  }}
+          p address
+      md-list-item.md-2-line
         .md-list-item-text
           h3 {{ store.store_no }}
           p store number
       md-list-item.md-2-line
         .md-list-item-text
-          h3 {{ store.address_line_1  }}
-          p address
+          h3 {{ store.telephone }}
+          p phone
+      md-list-item.md-2-line
+        .md-list-item-text
+          h3 {{ store.has_wheelchair_accessability }}
+          p wheelchair accessible
