--- a/src/elsie.product/templates/product.jade
+++ b/src/elsie.product/templates/product.jade
@@ -31,7 +31,7 @@ doctype
       md-list-item.md-3-line(ng-if="product.description")
         .md-list-item-text
           p {{ product.description }}
-      md-divider
+      md-divider(ng-if="product.description && tags")
       md-list-item
         md-chips(ng-model="tags",readonly="true")
 
