--- a/src/elsie.store/styles/store.scss
+++ b/src/elsie.store/styles/store.scss
@@ -4,7 +4,11 @@
   background-repeat: no-repeat;
   background-position-x: center;
   background-position-y: top;
-  height: 100%;
+  position: absolute;
+  top: $bump;
+  left: 0;
+  bottom: 0;
+  right: 0;
   .image {
     height: 244px;
   }
