--- a/src/elsie.common/styles/animations.scss
+++ b/src/elsie.common/styles/animations.scss
@@ -12,10 +12,6 @@
   transition:all $transition ease;
   -webkit-transition-delay: 0.01s;
   transition-delay: 0.01s;
-  &.no-animate {
-    -webkit-transition-delay: 0s;
-    transition-delay: 0s;
-  }
 }
 
 // exiting state (initial)
@@ -27,10 +23,10 @@
     z-index: 1;
     -webkit-transform:translate3d(0, 0, 0);
     transform:translate3d(0, 0, 0);
-  }
-  &.no-animate {
-    -webkit-transform:translate3d(100%, 0, 0);
-    transform:translate3d(100%, 0, 0);
+    &.no-animate {
+      -webkit-transform:translate3d(100%, 0, 0);
+      transform:translate3d(100%, 0, 0);
+    }
   }
 }
 
@@ -39,10 +35,18 @@
   z-index: 0;
   -webkit-transform:translate3d(-33%, 0, 0);
   transform:translate3d(-33%, 0, 0);
+  &.no-animate {
+    -webkit-transform:translate3d(0, 0, 0);
+    transform:translate3d(0, 0, 0);
+  }
   &.state-higher {
     z-index: 1;
     -webkit-transform:translate3d(100%, 0, 0);
     transform:translate3d(100%, 0, 0);
+    &.no-animate {
+      -webkit-transform:translate3d(100%, 0, 0);
+      transform:translate3d(100%, 0, 0);
+    }
   } 
 }
 
